syntax = "proto3";

package org.project_planton.provider.kubernetes.workload.kubernetestemporal.v1;

import "org/project_planton/provider/kubernetes/kubernetestemporal/v1/api.proto";
import "org/project_planton/provider/kubernetes/provider.proto";

//temporal-kubernetes stack-input
message KubernetesTemporalStackInput {
  //target cloud-resource
  KubernetesTemporal target = 1;
  //provider-config
  org.project_planton.provider.kubernetes.KubernetesProviderConfig provider_config = 2;
  //kubernetes namespace
  string kubernetes_namespace = 3;
}
